Smaller fixes -Fixed Dist function and html-dist -Removed app-config and moved to app.js -Fixed some stuff for mobile (will change later) --overflow css --wordwrap --default font-size (16 seems unneeded)

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,5 @@
 $font-stack: Verdana, sans-serif;
-$font-size:16px;
+$font-size:12px;
 $font-light: #fff;
 $font-dark: #000;
 $primary-color: #468af0;
