--- a/sass/partials/_tauntslist.scss
+++ b/sass/partials/_tauntslist.scss
@@ -1,5 +1,6 @@
 .taunts{
 	overflow-y:auto;
+	overflow-x:hidden;
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -moz-flex: 1;
